# swagger-output.json
@@ -235,134 +235,6 @@
           }
         ]
       }
-    },
-    "/api/v1/trx/": {
-      "get": {
-        "tags": [
-          "FINANCE"
-        ],
-        "summary": "ref parameter",
-        "description": "untuk referensi group",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
-      },
-      "post": {
-        "tags": [
-          "FINANCE"
-        ],
-        "summary": "ref parameter",
-        "description": "untuk referensi group",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Create role",
-            "schema": {
-              "$ref": "#/definitions/BodyFinancialLedgerSchema"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
-      }
-    },
-    "/api/v1/trx/{id}": {
-      "put": {
-        "tags": [
-          "FINANCE"
-        ],
-        "summary": "ref parameter",
-        "description": "untuk referensi group",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Create role",
-            "schema": {
-              "$ref": "#/definitions/BodyFinancialLedgerSchema"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
-      },
-      "delete": {
-        "tags": [
-          "FINANCE"
-        ],
-        "summary": "ref parameter",
-        "description": "untuk referensi group",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
-      }
     }
   },
   "definitions": {
